<resources>
    <string name="app_name">NAMED MEMORIES</string>
    <string name="app_logo">App logo</string>
    <string name="App_Name">Named Memories</string>
    <string name="Profilepic_Hint">Tap to select a profile picture</string>
    <string name="Username_hint">Enter your name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="Button_context">Save and Continue</string>
    <string name="add_memory">Add Memory</string>
    <string name="profile_pic">Profile Image</string>
    <string name="username">User Name</string>
    <string name="view_timeline">View Timeline</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_hint">Don\'t have an account? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="splashscreen_tagline">Preserve Your Precious Moments.</string>
    <string name="couple_image">Couple Image</string>
    <string name="get_started">Get Started</string>
    <string name="Intro_info">Cherish Your Timeless Moments Here</string>
    <string name="moments_worth_keeping">Moments Worth Keeping</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Birthday_date">Enter your birthday (DD/MM/YYYY)</string>
    <string name="no_events">No Events</string>
    <string name="calendar">Calendar</string>
    <string name="messages">Messages</string>
    <string name="manage_people">Connect To People</string>
    <string name="memories">Memories</string>
    <string name="day_streak">Day Streak</string>
    <string name="people">People</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="plan_events_with_friends_in_chat_or_add_them_manually">Plan events with friends in chat or add them manually</string>
    <string name="add_new_memory">Add New Memory</string>
    <string name="view_memories">View Memories</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="menu">Menu</string>
    <string name="view_all">View All</string>
    <string name="welcome_back">Welcome back!</string>
    <string name = "add_event">Add Event</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="event_title">Event Title</string>
    <string name="enter_event_title">Enter event title</string>
    <string name="pick_time">Pick Time</string>
    <string name="selected_time_09_00_am">Selected Time: 09:00 AM</string>
</resources>