<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:background="@android:color/white">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_person"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/CircleImage"
        android:contentDescription="@string/profile_pic"
        android:background="@drawable/circle_bg" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_below="@id/profileImageView"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textColor="#A1887F"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addMemoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_memory"
        android:layout_below="@id/welcomeTextView"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/viewTimelineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_timeline"
        android:layout_below="@id/addMemoryButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
