<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="@color/home_screen_ui">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:backgroundTint="@color/burnt_orange"
        android:drawableStart="@android:drawable/ic_menu_send"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="#B71C1C"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:backgroundTint="@color/burnt_orange"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="#B71C1C"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/burnt_orange"
        android:textColor="#212121"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/textViewSignupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_hint"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_marginTop="15dp" />
</LinearLayout>
